@@ -13,8 +13,8 @@ user interface) for R, based on the tcltk package.
 \tabular{ll}{
 Package: \tab Rcmdr\cr
 Version: \tab 2.1-1\cr
-Date: \tab 2014/09/03\cr
-Depends: \tab R (>= 3.0.0), grDevices, utils, splines, RcmdrMisc (>= 1.0-1), 
+Date: \tab 2014/09/04\cr
+Depends: \tab R (>= 3.0.0), grDevices, utils, splines, RcmdrMisc (>= 1.0-2), 
   car (>= 2.0-21)\cr
 Imports: \tab tcltk, tcltk2 (>= 1.2-6), markdown, knitr, abind\cr
 Suggests: \tab aplpack, colorspace, effects (>= 3.0-1), e1071, foreign, grid, 
